@@ -408,6 +408,7 @@ class Start implements \TYPO3\CMS\Core\SingletonInterface
                         return '';
                     }
                     PaymentApi::storeReferenceUid($referenceId);
+                    PaymentApi::storeConfScript($confScript);
 
                     $transactionDetailsArray = static::getTransactionDetails(
                         $referenceId,
